# medseg-mlops

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  template.py
config/: config.yaml
research/: unet_baseline.ipynb
src/medical/components/: data_ingestion.py  data_validation.py
src/medical/config/: configuration.py
src/medical/entity/: artifact_entity.py  config_entity.py  config_schema.py
src/medical/exceptions/: __init__.py
src/medical/logger/: __init__.py
src/medical/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py
src/medical/utils/: common.py
